[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvidia-stability"
version = "1.0.0"
description = "NVIDIA GPU configuration and optimization tool for all Linux distributions"
readme = "README.md"
license = {text = "MPL-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "TheusHen"}
]
keywords = ["nvidia", "gpu", "linux", "driver", "optimization", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
nvidia-stability = "nvidia_stability:main"

[project.urls]
Homepage = "https://github.com/TheusHen/NvidiaStability4AllLinux"
Repository = "https://github.com/TheusHen/NvidiaStability4AllLinux"
Issues = "https://github.com/TheusHen/NvidiaStability4AllLinux/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
